--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "bcrypt": "^5.1.1",
+        "body-parser": "^1.20.2",
+        "ejs": "^3.1.10",
         "express": "^4.18.2",
+        "express-session": "^1.18.0",
         "mongodb": "^6.5.0",
         "mongoose": "^8.3.3"
     },
